--- a/boards/arm/eyelash_sofle/eyelash_sofle_left_defconfig
+++ b/boards/arm/eyelash_sofle/eyelash_sofle_left_defconfig
@@ -8,9 +8,6 @@ CONFIG_SOC_NRF52840_QIAA=y
 CONFIG_BOARD_EYELASH_SOFLE_LEFT=y
 CONFIG_ZMK_SLEEP=y
 
-
-
-
 # Enable MPU
 CONFIG_ARM_MPU=y
 
@@ -79,3 +76,5 @@ CONFIG_ZMK_HID_REPORT_TYPE_NKRO=n
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 CONFIG_ZMK_POINTING=y
+
+#Other
