--- a/config/eyelash_sofle.conf
+++ b/config/eyelash_sofle.conf
@@ -1,6 +1,5 @@
-# go to sleep after one hour (1*60*60*1000ms)
-
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+# go to sleep after 10 minutes (10*60*1000ms)
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
 
 CONFIG_ZMK_SLEEP=y
 
